tests/idris2/total/total013/expected
1/1: Building Issue1404 (Issue1404.idr)
Error: Foo is not total, not strictly positive

Issue1404:3:1--4:30
 3 | data Foo : Type where
 4 |   MkFoo : (Foo -> Foo) -> Foo

Error: MkFoo is not total, not strictly positive

Issue1404:4:3--4:8
 1 | 
 2 | total
 3 | data Foo : Type where
 4 |   MkFoo : (Foo -> Foo) -> Foo
       ^^^^^

